# mesbg-probability-engine

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
bootstrap/: mesbg-probability-engine-v0.1.0-e42f93c-runtime-bundle.sha256.txt  mesbg-probability-engine-v0.1.0-e42f93c-runtime-bundle.tar.gz.b64.txt
docs/: EDGE_CASE_MATRIX.md  PROJECT_AUDIT.md  TEST_REPORT.md
examples/: galadhrim_three_rank_vs_cavalry.json  galadhrim_three_rank_vs_infantry.json  galadhrim_two_rank_vs_infantry.json  split_wound_modifier_and_might.json
examples/output/: galadhrim_three_rank_vs_cavalry.output.json  galadhrim_three_rank_vs_infantry.output.json  galadhrim_two_rank_vs_infantry.output.json  split_wound_modifier_and_might.output.json
project_integration/: README_MANIFEST_SNIPPET.md
schemas/: combat-input-v1.schema.json
src/mesbg_probability/: __init__.py  cli.py  damage.py  duel.py  engine.py  errors.py  schema.py  util.py  wound.py
tests/: test_damage.py  test_duel.py  test_engine.py  test_wound.py
